--- a/api/movies/models/movies.settings.json
+++ b/api/movies/models/movies.settings.json
@@ -40,6 +40,10 @@
     "genres": {
       "via": "movies",
       "collection": "genre"
+    },
+    "rating": {
+      "via": "movies",
+      "model": "rating"
     }
   }
 }
